--- a/style.css
+++ b/style.css
@@ -29,11 +29,12 @@
 
 *{
     font-family: var(--font-family);
-    transition: 0.5s;
+    transition: 0.45s;
 }
 
 body{
     background-color: var(--bg-color);
+    /*max-height: 100vh;*/
 }
 
 header{
@@ -72,7 +73,7 @@ header{
 section {
     background-color: #00000000;
     color: var(--primary-color);
-    min-height: 97vh;
+    height: 89vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -83,7 +84,7 @@ section {
 }
 
 h1 {
-    font-size: 5em;
+    font-size: 4.2em;
 }
 
 h3 {
